force-app/main/default/objects/Budget_Line__c/Budget_Line__c.object-meta.xml
<CustomObject>
    <description>Version-scoped WBS and resource plan line.</description>
    <label>Budget Line</label>
    <nameField>
        <displayFormat>BL-{00000}</displayFormat>
        <label>Budget Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>