force-app/main/default/objects/Budget_Line__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allocation Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>