force-app/main/default/objects/Budget_Line__c/fields/Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>