force-app/main/default/objects/Budget_Line__c/fields/Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Planned_Cost__c</fullName>
    <formula>Planned_Hours__c * Cost_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>