force-app/main/default/objects/Budget_Line__c/fields/Resource__c.field-meta.xml
<CustomField><fullName>Resource__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Team Member</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Resource Budget Lines</relationshipLabel><relationshipName>Budget_Lines</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></CustomField>