force-app/main/default/objects/Budget_Line__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Salesforce Role</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>