force-app/main/default/objects/Budget_Line__c/fields/Role_End__c.field-meta.xml
<CustomField><fullName>Role_End__c</fullName><label>Role End</label><required>false</required><trackHistory>false</trackHistory><type>Date</type></CustomField>