force-app/main/default/objects/Budget_Line__c/fields/Role_Start__c.field-meta.xml
<CustomField><fullName>Role_Start__c</fullName><label>Role Start</label><required>false</required><trackHistory>false</trackHistory><type>Date</type></CustomField>