force-app/main/default/objects/Budget_Line__c/fields/Work_Unit__c.field-meta.xml
<CustomField>
    <fullName>Work_Unit__c</fullName>
    <label>Work Unit</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>