force-app/main/default/objects/Budget_Line__c/validationRules/Budget_Line_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Line_Values</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Planned_Hours__c &lt; 0, Allocation_Percent__c &lt; 0, Allocation_Percent__c &gt; 100, Cost_Rate__c &lt; 0)</errorConditionFormula>
    <errorMessage>Hours, allocation and cost must be valid nonnegative values.</errorMessage>
</ValidationRule>