force-app/main/default/objects/Budget_Line__c/validationRules/Role_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Role_Start__c)), NOT(ISBLANK(Role_End__c)), Role_End__c &lt; Role_Start__c)</errorConditionFormula>
    <errorMessage>Role End cannot precede Role Start.</errorMessage>
</ValidationRule>